--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test:env:down": "npx w3 test-env down",
     "deploy": "npx w3 build --ipfs http://localhost:5001 --test-ens checker.eth",
     "test": "npx w3 query ./recipes/e2e.json",
+    "jest": "jest",
     "reset": "yarn clean && yarn",
     "clean": "npx rimraf ./**/node_modules ./**/build ./**/w3 ./**/.w3",
     "restart": "yarn test:env:down && yarn test:env:up"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.0",
     "@msgpack/msgpack": "^2.7.1",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^27.0.3",
     "@web3api/cli": "^0.0.1-prealpha.49",
     "@web3api/client-js": "^0.0.1-prealpha.49",
     "@web3api/test-env-js": "^0.0.1-prealpha.49",
@@ -26,9 +29,11 @@
     "date-time-plugin": "^0.0.1-prealpha.49",
     "ethers": "^5.4.7",
     "gelato-web3api-interface": "^0.0.1",
+    "jest": "^27.4.4",
     "json-as": "^0.2.6",
     "solc": "^0.8.9",
-    "typescript": "^4.4.4",
+    "ts-jest": "^27.1.1",
+    "typescript": "^4.5.3",
     "yarn-upgrade-all": "^0.5.4"
   }
 }
