--- a/web3api.yaml
+++ b/web3api.yaml
@@ -7,7 +7,7 @@ modules:
     schema: ./src/query/schema.graphql
     module: ./src/query/index.ts
 import_redirects:
-  - uri: ens/datetime.eth
-    schema: ./node_modules/date-time-plugin/build/schema.graphql
+  - uri: ens/gelato-plugin.eth
+    schema: ./node_modules/gelato-polywrap-plugin/build/schema.graphql
   - uri: ens/gelato.eth
-    schema: ./node_modules/gelato-web3api-interface/build/schema.graphql
+    schema: ./node_modules/gelato-polywrap-interface/build/schema.graphql
