--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.3",
     "yarn-upgrade-all": "^0.5.4"
+  },
+  "dependencies": {
+    "ts-node": "^10.4.0"
   }
 }
